<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.yandex.arenda</groupId>
    <artifactId>arenda-tests</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Root</name>

    <modules>
        <module>arenda-web-client</module>
        <module>arenda-web-tests</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <allure.version>2.9.0</allure.version>

        <ashot.version>1.5.3</ashot.version>
        <aspectj.version>1.9.1</aspectj.version>
        <gson.version>2.8.4</gson.version>
        <guice.version>4.1.0</guice.version>
        <hamcrest.version>1.3</hamcrest.version>
        <junit.version>4.12</junit.version>
        <selenium.version>3.141.59</selenium.version>
        <browsermob-core.version>2.1.5</browsermob-core.version>
        <grid.client.version>1.0-SNAPSHOT</grid.client.version>
        <restassured.version>3.1.0</restassured.version>
        <!--default-->
        <parallel.strategy>classesAndMethods</parallel.strategy>
        <thread.count>1</thread.count>
        <fork.count>1</fork.count>
        <swagger-core-version>1.5.15</swagger-core-version>
        <okio-version>1.13.0</okio-version>
        <commons.lang>2.4</commons.lang>
        <retrofit-version>2.3.0</retrofit-version>
        <json-unit.version>2.5.0</json-unit.version>
        <commons.version>1.2-SNAPSHOT</commons.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Ashot -->
            <dependency>
                <groupId>ru.yandex.qatools.ashot</groupId>
                <artifactId>ashot</artifactId>
                <version>${ashot.version}</version>
            </dependency>

            <!-- Allure -->
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-java-commons</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-junit4</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-assertj</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-okhttp3</artifactId>
                <version>${allure.version}</version>
            </dependency>

            <!-- AspectJ -->
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>${aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${aspectj.version}</version>
            </dependency>
            <!-- Other -->
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${restassured.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>${retrofit-version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>3.8.0</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>converter-gson</artifactId>
                <version>${retrofit-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject.extensions</groupId>
                <artifactId>guice-multibindings</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.carlosbecker</groupId>
                <artifactId>guice-junit-test-runner</artifactId>
                <version>1.1</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>org.hamcrest</groupId>-->
<!--                <artifactId>hamcrest-all</artifactId>-->
<!--                <version>${hamcrest.version}</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>io.qameta.atlas</groupId>
                <artifactId>atlas-webdriver</artifactId>
                <version>1.8.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aeonbits.owner</groupId>
                <artifactId>owner-java8</artifactId>
                <version>1.0.9</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>org.apache.httpcomponents</groupId>-->
<!--                <artifactId>httpcore</artifactId>-->
<!--                <version>4.4.4</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.apache.httpcomponents</groupId>-->
<!--                <artifactId>httpclient</artifactId>-->
<!--                <version>4.5.2</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-api</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-remote-driver</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>net.lightbody.bmp</groupId>
                <artifactId>browsermob-core</artifactId>
                <version>${browsermob-core.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.qatools.selenium</groupId>
                <artifactId>selenium-grid-client</artifactId>
                <version>${grid.client.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.seleniumhq.selenium</groupId>
                        <artifactId>selenium-java</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.seleniumhq.selenium</groupId>
                        <artifactId>selenium-remote-driver</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>ru.yandex.qatools.allure</groupId>
                        <artifactId>allure-junit-adaptor</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.lanwen.diff</groupId>
                <artifactId>uri-differ-lib</artifactId>
                <version>1.3.0</version>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>3.1.6</version>
            </dependency>
            <!--Commons-->
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons-ra</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>guice-junit</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>guice-webdriver</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>passport-yandex</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>passport-commons</artifactId>
                <version>${commons.version}</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>ru.yandex.qatools.htmlelements</groupId>-->
<!--                <artifactId>htmlelements-matchers</artifactId>-->
<!--                <version>1.17</version>-->
<!--            </dependency>-->
            <!--jackson-->
<!--            <dependency>-->
<!--                <groupId>ru.yandex</groupId>-->
<!--                <artifactId>common-util</artifactId>-->
<!--                <version>0.0.145</version>-->
<!--                <exclusions>-->
<!--                    <exclusion>-->
<!--                        <groupId>com.oracle</groupId>-->
<!--                        <artifactId>ojdbc14</artifactId>-->
<!--                    </exclusion>-->
<!--                    <exclusion>-->
<!--                        <groupId>blowfishj</groupId>-->
<!--                        <artifactId>blowfishj</artifactId>-->
<!--                    </exclusion>-->
<!--                    <exclusion>-->
<!--                        <groupId>com.danga</groupId>-->
<!--                        <artifactId>memcached</artifactId>-->
<!--                    </exclusion>-->
<!--                    <exclusion>-->
<!--                        <artifactId>json</artifactId>-->
<!--                        <groupId>org.json</groupId>-->
<!--                    </exclusion>-->
<!--                </exclusions>-->
<!--            </dependency>-->
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${commons.lang}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit-assertj</artifactId>
                <version>${json-unit.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>2.8</version>
                    <configuration>
                        <reportVersion>${allure.version}</reportVersion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <argLine>
                            -Xms256m -Xmx6g -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        </argLine>
                        <groups>${groups}</groups>
                        <excludedGroups>${excluded.groups}</excludedGroups>
                        <includes>
                            <include>${include.packages}</include>
                        </includes>
                        <excludes>
                            <exclude>${exclude.packages}</exclude>
                        </excludes>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>io.qameta.allure.junit4.AllureJunit4</value>
                            </property>
                        </properties>
                        <systemProperties>
                            <property>
                                <name>allure.results.directory</name>
                                <value>${project.build.directory}/allure-results</value>
                            </property>
                            <property>
                                <name>allure.link.issue.pattern</name>
                                <value>https://st.yandex-team.ru/{}</value>
                            </property>
                        </systemProperties>

                        <parallel>${parallel.strategy}</parallel>
                        <threadCountClasses>1</threadCountClasses>
                        <threadCountMethods>1</threadCountMethods>

                        <forkCount>${fork.count}</forkCount>
                        <reuseForks>false</reuseForks>

                        <useSystemClassLoader>false</useSystemClassLoader>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <id>copy-resources</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>
                                    ${project.build.directory}/allure-results
                                </outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>${project.build.testOutputDirectory}/allure</directory>
                                        <includes>
                                            <include>categories.json</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
        <repository>
            <id>yandex</id>
            <url>http://artifactory.yandex.net/artifactory/public</url>
        </repository>
    </repositories>
</project>
